<resources>
    <string name="app_name">App Incidencias</string>
    <string name="btn_iniciarSesion">Iniciar Sesión</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="txt_cedula">Cédula</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_primerApellido">Primer Apellido</string>
    <string name="txt_segundoApellido">Segundo Apellido</string>
    <string name="txt_provincia">Provincia</string>
    <string name="txt_canton">Cantón</string>
    <string name="txt_distrito">Distrito</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_correoElectronico">Correo</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_contrasenia">Contraseña</string>
    <string name="btn_incidencia">Reportar</string>
    <string name="btn_actualizarIncidencia">Actualizar</string>
    <string name="btn_carretera">Carretera</string>
    <string name="btn_municipalidad">Municipalidad</string>
    <string name="txt_direccionExacta">Dirección Exacta</string>
    <string name="btn_imagen">Imagen</string>
    <string name="txt_detalleIncidente">Detalles</string>
    <string name="txt_puente">Puente</string>
    <string name="txt_servicio_publico">Servicio Público</string>
    <string name="txt_cuenta">Cuenta</string>
    <string name="txt_titulo">Registro de Incidencias</string>
    <string name="txt_bienvenida">Repositorio de incidencias para los ciudadanos costarricenses</string>
    <string name="txt_opcion">Elija una Opción</string>
    <string name="txt_incidencias">Incidencias</string>
    <string name="txt__servicio_privado">Servicio Privado</string>
    <string name="btn_siguiente_incidencia">Siguiente</string>
    <string name="titulo_Listas">Lista Incidencias</string>
    <string name="title_activity_mapa_agregar_incidencia">Map</string>
    <string name="txt_registrar_incidencia">Registrar Incidencia</string>
    <string name="txt_incidencia">Incidencia</string>
    <string name="txt_actualizar_incidencia">Actualizar Incidencia</string>
    <string name="txt_activar_usuario">Activar Usuario</string>
    <string name="txt_codigo_activacion">Codigo de activación</string>
    <string name="txt_activar">Activar</string>

</resources>

