<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30px"
            android:text="@string/txt_titulo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:text="@string/txt_bienvenida"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txt_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:layout_marginBottom="50px"
            android:text="@string/txt_cuenta"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginTop="50px"
                android:layout_marginRight="10px"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/btn_iniciarSesion" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_marginTop="50px"
                android:layout_marginRight="20px"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/btn_registrarse"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>