<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ActualizarIncidencia1Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="Datos Personales"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_cedula_actualizar_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:hint="Ej: 117410990" />

    <EditText
        android:id="@+id/txt_nombre_actualizar_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:ems="10"
        android:inputType="text"
        android:hint="Ej: Katherine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_apellido1_actualizar_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            tools:hint="Ej: Martinez" />

        <EditText
            android:id="@+id/txt_apellido2_actualizar_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="Ej: Chacon" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_titulo_datos_actualizar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Datos de la Incidencia"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/txt_categoria_incidencia_actualizar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50px" />

    <Spinner
        android:id="@+id/txt_categoria_empresa_actualizar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_provincia_actualizar_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/txt_provincia" />

        <EditText
            android:id="@+id/txt_canton_actualizar_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/txt_canton" />

        <EditText
            android:id="@+id/txt_distrito_actualizar_incidencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/txt_distrito" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_siguiente_actualizar_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/btn_siguiente_incidencia"
        android:textColor="@android:color/white"/>

</LinearLayout>