<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalle_incidencia">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="Datos Personales"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="Ej: 117410990" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:ems="10"
        android:inputType="number"
        android:text="Ej: Katherine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_cedula_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="Ej: Martinez" />

        <EditText
            android:id="@+id/txt_nombre_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="Ej: Chacon" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Datos de la Incidencia"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50px" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_primer_apellido_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/txt_provincia" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/txt_canton" />

        <EditText
            android:id="@+id/txt_distrito_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/txt_distrito" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_siguiente_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="225px"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Siguiente"
        android:textColor="@android:color/white"/>

</LinearLayout>