<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Datos Personales"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Ej: 117410990"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:ems="10"
        android:hint="Ej: Katherine"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_cedula_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Ej: Martinez"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_nombre_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Ej: Chacon"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Datos de la Incidencia"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50px" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_provincia_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_provincia"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_canton_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_canton"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_distrito_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80px"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txt_distrito"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_siguiente_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Siguiente"
        android:textColor="@android:color/white" />

</LinearLayout>